New primitives in LuaTeX v1

--- a/l3kernel/l3names.dtx
+++ b/l3kernel/l3names.dtx
@@ -811,6 +811,7 @@
   \__kernel_primitive:NN \formatname                  \luatex_formatname:D
   \__kernel_primitive:NN \hjcode                      \luatex_hjcode:D
   \__kernel_primitive:NN \hpack                       \luatex_hpack:D
+  \__kernel_primitive:NN \hyphenationbounds           \luatex_hyphenationbounds:D
   \__kernel_primitive:NN \hyphenationmin              \luatex_hyphenationmin:D
   \__kernel_primitive:NN \gleaders                    \luatex_gleaders:D
   \__kernel_primitive:NN \initcatcodetable            \luatex_initcatcodetable:D
@@ -819,12 +820,15 @@
   \__kernel_primitive:NN \letcharcode                 \luatex_letcharcode:D
   \__kernel_primitive:NN \luaescapestring             \luatex_luaescapestring:D
   \__kernel_primitive:NN \luafunction                 \luatex_luafunction:D
+  \__kernel_primitive:NN \luatexbanner                \luatex_luatexbanner:D
   \__kernel_primitive:NN \luatexdatestamp             \luatex_luatexdatestamp:D
   \__kernel_primitive:NN \luatexrevision              \luatex_luatexrevision:D
   \__kernel_primitive:NN \luatexversion               \luatex_luatexversion:D
   \__kernel_primitive:NN \mathdisplayskipmode         \luatex_mathdisplayskipmode:D
   \__kernel_primitive:NN \matheqnogapstep             \luatex_matheqnogapstep:D
   \__kernel_primitive:NN \mathoption                  \luatex_mathoption:D
+  \__kernel_primitive:NN \mathnolimitsmode            \luatex_mathnolimitsmode:D
+  \__kernel_primitive:NN \mathrulesfam                \luatex_mathrulesfam:D
   \__kernel_primitive:NN \mathscriptsmode             \luatex_mathscriptsmode:D
   \__kernel_primitive:NN \mathstyle                   \luatex_mathstyle:D
   \__kernel_primitive:NN \mathsurroundskip            \luatex_mathsurroundskip:D
@@ -846,6 +850,7 @@
   \__kernel_primitive:NN \savecatcodetable            \luatex_savecatcodetable:D
   \__kernel_primitive:NN \scantextokens               \luatex_scantextokens:D
   \__kernel_primitive:NN \setfontid                   \luatex_setfontid:D
+  \__kernel_primitive:NN \shapemode                   \luatex_shapemode:D
   \__kernel_primitive:NN \suppressifcsnameerror       \luatex_suppressifcsnameerror:D
   \__kernel_primitive:NN \suppresslongerror           \luatex_suppresslongerror:D
   \__kernel_primitive:NN \suppressmathparerror        \luatex_suppressmathparerror:D
@@ -858,7 +863,7 @@
 % Slightly more awkward are the directional primitives in \LuaTeX{}. These
 % come from Omega/Aleph, but we do not support those engines and
 % so it seems most sensible to treat them as \LuaTeX{} primitives for prefix
-% purposes.
+% purposes. One here is \enquote{new} but fits into the general set.
 %    \begin{macrocode}
   \__kernel_primitive:NN \bodydir                     \luatex_bodydir:D
   \__kernel_primitive:NN \boxdir                      \luatex_boxdir:D
@@ -868,6 +873,7 @@
   \__kernel_primitive:NN \localleftbox                \luatex_localleftbox:D
   \__kernel_primitive:NN \localrightbox               \luatex_localrightbox:D
   \__kernel_primitive:NN \mathdir                     \luatex_mathdir:D
+  \__kernel_primitive:NN \linedir                     \luatex_linedir:D
   \__kernel_primitive:NN \pagebottomoffset            \luatex_pagebottomoffset:D
   \__kernel_primitive:NN \pagedir                     \luatex_pagedir:D
   \__kernel_primitive:NN \pagerightoffset             \luatex_pagerightoffset:D
