--- a/news/l3news10.tex
+++ b/news/l3news10.tex
@@ -26,7 +26,7 @@
 
 There has been something of a gap since the last \LaTeX3 News, but this does
 not mean that work has not been going on. The Team have been working on a
-number of areas, many which reflect wider take-up of \pkg{expl3}. There have
+number of areas, many of which reflect wider take-up of \pkg{expl3}. There have
 also been a number of significant new developments in the \LaTeX3
 \enquote{sphere} in the last two years.
 
