Copy edits from BB [ci skip]
Also re-wrapped the lines.

--- a/news/l3news10.tex
+++ b/news/l3news10.tex
@@ -32,10 +32,10 @@ also been a number of significant new developments in the \LaTeX3
 
 \section{\pkg{l3build}: Testing \LaTeX{} packages}
 
-Testing has been an important part of the work of the team since maintenance of
-\LaTeX{} over twenty years ago. Various scripts have been used over that time
-by the team for testing, but these have until recently not be set up for wider
-use.
+Testing has been an important part of the work of the team since they assumed
+maintenance of \LaTeX{} over twenty years ago. Various scripts have been used
+over that time by the team for testing, but these have until recently not been
+set up for wider use.
 
 With the general availability of \hologo{LuaTeX} it is now possible to be sure
 that every \TeX{} user has a powerful general scripting language available:
@@ -59,22 +59,21 @@ sufficiently flexible that for many common \LaTeX{} package structures, setting
 up for creating releases will require only a few lines of configuration.
 
 In addition to the documentation distributed with \pkg{l3build} the project
-website~\cite[publications in 2014]{project-publications} contains
-some articles, videos and conference presentations that explain how to
-use \pkg{l3build} to manage and test any type of (\LaTeX{}) package.
+website~\cite[publications in 2014]{project-publications} contains some
+articles, videos and conference presentations that explain how to use
+\pkg{l3build} to manage and test any type of (\LaTeX{}) package.
 
 \section{Automating \pkg{expl3} testing}
 
-As well developing \pkg{l3build} for local use, the team have also set
-up integration testing for \pkg{expl3} using the Travis-CI
-system. This means that \emph{every} commit to the \LaTeX3 code base
-now results in a full set of tests being run. This has allowed us to
-significantly reduce the number of occasions where \pkg{expl3} needs
-attention before being released to CTAN.
+As well as developing \pkg{l3build} for local use, the team have also set up
+integration testing for \pkg{expl3} using the Travis-CI system. This means that
+\emph{every} commit to the \LaTeX3 code base now results in a full set of tests
+being run. This has allowed us to significantly reduce the number of occasions
+where \pkg{expl3} needs attention before being released to CTAN.
 
-Automated testing has also enabled us to check that \pkg{expl3}
-updates do not break a number of key third-party packages which use
-the programming environment.
+Automated testing has also enabled us to check that \pkg{expl3} updates do not
+break a number of key third-party packages which use the programming
+environment.
 
 \section{Refining \pkg{expl3}}
 
@@ -91,14 +90,12 @@ of this process, the \enquote{low-level} part of \pkg{expl3}, which saves all
 primitives, now covers essentially all primitives found in all of these
 engines.
 
-The code in \pkg{expl3} is now entirely self-contained, loading no
-other third-party packages, and can also be loaded as a generic
-package with plain \TeX{}, \emph{etc.} These changes make it much
-easier to diagnose problems and make \pkg{expl3} more useful.
-%
-In particular it can be used as a programming language for generic
-packages, that then can run without modifications under different
-formats!
+The code in \pkg{expl3} is now entirely self-contained, loading no other
+third-party packages, and can also be loaded as a generic package with plain
+\TeX{}, \emph{etc.} These changes make it much easier to diagnose problems and
+make \pkg{expl3} more useful. % In particular it can be used as a programming
+language for generic packages, that then can run without modifications under
+different formats!
 
 The team have made a range of small refinements to both internals and
 \pkg{expl3} interfaces. Internal self-consistency has also been improved, for
@@ -110,11 +107,11 @@ for end users.
 
 \section{Replacing \cs{lowercase} and \cs{uppercase}}
 
-As discussed in the last \LaTeX3 News, the team have for some time been keen
-to provide new interfaces which do not directly expose (or in some cases
-even use) the \TeX{} primitives \cs{lowercase} and \cs{uppercase}. We have
-now created a series of different interfaces that provide support for the
-different conceptual uses which may flow from the primitives:
+As discussed in the last \LaTeX3 News, the team have for some time been keen to
+provide new interfaces which do not directly expose (or in some cases even use)
+the \TeX{} primitives \cs{lowercase} and \cs{uppercase}. We have now created a
+series of different interfaces that provide support for the different
+conceptual uses which may flow from the primitives:
 \begin{itemize}
   \item For case changing text, \cs{tl_upper_case:n}, \cs{tl_lower_case:n},
     \cs{tl_mixed_case:n} and related language-aware functions. These are
@@ -139,8 +136,8 @@ different conceptual uses which may flow from the primitives:
 \section{Extending \pkg{xparse}}
 
 After discussions at TUG2015, the team have added a new argument type,
-\texttt{k} (\enquote{key}) to \pkg{xparse}. This allows arguments similar
-to \TeX{} primitive sub- and superscripts to be accepted. Thus
+\texttt{k} (\enquote{key}) to \pkg{xparse}. This allows arguments similar to
+\TeX{} primitive sub- and superscripts to be accepted. Thus
 \begin{verbatim}
 \DeclareDocumentCommand\foo{k^k_}
   {\showtokens{"#1":"#2"}}
@@ -158,13 +155,13 @@ which may make sense for this interface.
 
 As part of development of \pkg{l3galley}, Joseph Wright has proposed a new
 model for splitting up the functions of the \cs{parshape} primitive into three
-logical elements
+logical elements:
 \begin{itemize}
   \item Margins between the edges of the galley and the paragraph (for example
-    an indented block)
+    an indented block);
   \item Cut-out sections running over a fixed number of lines, to support
-    \enquote{in place} figures and so forth
-  \item Running or single-paragraph shape
+    \enquote{in place} figures and so forth;
+  \item Running or single-paragraph shape.
 \end{itemize}
 
 There are additional elements to consider here, for example whether lines are
@@ -174,34 +171,34 @@ at page breaks, \emph{etc.}
 
 \section{Globally optimized pagination of documents}
 
-Throughout 2016 Frank Mittelbach worked on methods and algorithms for
-globally optimizing the pagination of documents including those that
-contain floats. Early research results have been presented at Bacho\TeX{}
-2016, TUG 2016 in Toronto and later in the year at \mbox{DocEng'16}, the ACM
-Symposium on Document Engineering in Vienna. A link to the ACM paper
-(that allows a download free of charge) can be found on the project
-website~\cite{project-publications}. The site also holds the speaker
-notes from Toronto and will host a link to a video of the
-presentation once it becomes available.
+Throughout 2016 Frank Mittelbach has worked on methods and algorithms for
+globally optimizing the pagination of documents including those that contain
+floats. Early research results have been presented at Bacho\TeX{} 2016, TUG
+2016 in Toronto and later in the year at \mbox{DocEng'16}, the ACM Symposium on
+Document Engineering in Vienna. A link to the ACM paper (that allows a download
+free of charge) can be found on the project
+website~\cite{project-publications}. The site also holds the speaker notes from
+Toronto and will host a link to a video of the presentation once it becomes
+available.
 
-The framework developed by Frank is based on the extended
-functionality provided by \hologo{LuaTeX} in particular its callback
-functions that allow interacting with the typesetting process at
-various points. The algorithm that determines the optimal pagination
-of a given document is implemented in {Lua} and its results are then
-used to direct the formatting done by the \TeX{} engine.
+The framework developed by Frank is based on the extended functionality
+provided by \hologo{LuaTeX}, in particular its callback functions that allow
+interacting with the typesetting process at various points. The algorithm that
+determines the optimal pagination of a given document is implemented in {Lua}
+and its results are then used to direct the formatting done by the \TeX{}
+engine.
 
-At the current point in time this a working prototype but not yet
-anywhere near a production-ready system. However, the work so far
-shows a great potential and Frank is fairly confident that it will
-eventually become a generally usable solution.
+At the current point in time this a working prototype but not yet anywhere near
+a production-ready system. However, the work so far shows great potential and
+Frank is fairly confident that it will eventually become a generally usable
+solution.
 
 \section{Looking forward}
 
 \begin{itemize}
   \item \hologo{LuaTeX} 1.0 is the promise for a stable \hologo{LuaTeX} engine
     and may well result in \hologo{LuaTeX} eventually replacing \hologo{pdfTeX}
-    default distribution engine.
+    as the default distribution engine.
   \item If that happens we expect to implement some of the more complex
     functionality (such as complex pagination requirements and models) only for
     \hologo{LuaTeX}.
@@ -218,6 +215,3 @@ eventually become a generally usable solution.
 
 
 \end{document}
-
-
-
