--- a/news/l3news10.tex
+++ b/news/l3news10.tex
@@ -197,7 +197,7 @@ solution.
 
 \begin{itemize}
   \item The \hologo{LuaTeX} engine has recently reached version~1.0. This may
-    presage a stable \hologo{LuaTeX} engine and is likely to result in
+    presage a stable \hologo{LuaTeX} and is likely to result in
     wider use of this engine in production documents.
   \item If that happens we expect to implement some of the more complex
     functionality (such as complex pagination requirements and models) only for
