--- a/news/l3news10.tex
+++ b/news/l3news10.tex
@@ -93,7 +93,7 @@ engines.
 The code in \pkg{expl3} is now entirely self-contained, loading no other
 third-party packages, and can also be loaded as a generic package with plain
 \TeX{}, \emph{etc.} These changes make it much easier to diagnose problems and
-make \pkg{expl3} more useful. % In particular it can be used as a programming
+make \pkg{expl3} more useful. In particular it can be used as a programming
 language for generic packages, that then can run without modifications under
 different formats!
 
