Typo (the code as given above includes quotes)

--- a/news/l3news10.tex
+++ b/news/l3news10.tex
@@ -154,7 +154,7 @@ This allows arguments similar to
 \end{verbatim}
 will show
 \begin{verbatim}
-{Hello}{-NoValue-}.
+"{Hello}{-NoValue-}".
 \end{verbatim}
 
 At present, this argument type is experimental: there are a number of models
