Add random numbers to l3fp, allow 0-argument functions
This commits adds rand() producing floating points in [0,1)
and randint(a,b) producing integers in [a,b] where a and b
must be integers less than 10^16 in magnitude (in principle
we could have allowed +10^16 and -10^16 too but it was easier
to code that way), and a can be omitted, defaulting to 1.

I reworked parsing a bit to allow the 0-argument rand() so
empty arguments (for instance due to extra commas) are now
ignored completely.  Thus max(,,,a,b,,,,) is equivalent to
max(a,b).  Drawback: round(a,,1) is equivalent to round(a,1),
where a user might have expected it to be equivalent to
round(a,0,1) namely "round to integer with ties rounded
toward +inf".

--- a/l3kernel/l3fp-aux.dtx
+++ b/l3kernel/l3fp-aux.dtx
@@ -939,6 +939,43 @@
 %    \end{macrocode}
 % \end{macro}
 %
+% \subsection{Integer floating points}
+%
+% \begin{macro}[int, EXP, pTF]{\@@_int:w}
+% \begin{macro}[aux, EXP]{\@@_int_normal:nnnnn, \@@_int_test:Nw}
+%   Tests if the floating point argument is an integer.  This holds if
+%   the rounding digit resulting from \cs{@@_decimate:nNnnnn} is~$0$.
+%    \begin{macrocode}
+\prg_new_conditional:Npnn \@@_int:w \s_@@ \@@_chk:w #1 #2 #3; { TF , T , F , p }
+  {
+    \if_case:w #1 \exp_stop_f:
+           \prg_return_true:
+    \or:   \@@_int_normal:nnnnn #3
+    \else: \prg_return_false:
+    \fi:
+  }
+\cs_new:Npn \@@_int_normal:nnnnn #1 #2#3#4#5
+  {
+    \if_int_compare:w #1 > \c_zero
+      \@@_decimate:nNnnnn { \c_sixteen - #1 }
+        \@@_int_test:Nw
+        {#2} {#3} {#4} {#5}
+    \else:
+      \prg_return_false:
+    \fi:
+  }
+\cs_new:Npn \@@_int_test:Nw #1#2;
+  {
+    \if_meaning:w 0 #1
+      \prg_return_true:
+    \else:
+      \prg_return_false:
+    \fi:
+  }
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
+%
 % \subsection{Small integer floating points}
 %
 % \begin{macro}[int, EXP]{\@@_small_int:wTF}
