--- a/l3kernel/source3body.tex
+++ b/l3kernel/source3body.tex
@@ -448,6 +448,7 @@ used on top of \LaTeXe{} if \cs{outer} tokens are used in the arguments.
     l3fp-expo.dtx ,
     l3fp-trig.dtx ,
     l3fp-convert.dtx ,
+    l3fp-random.dtx ,
     l3fp-assign.dtx ,
   }
 \ExplSyntaxOff
