Turns out we weren't logging all key declarations!

--- a/l3kernel/l3keys.dtx
+++ b/l3kernel/l3keys.dtx
@@ -1515,11 +1515,8 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_cmd_set:nn #1#2
   {
-    \cs_if_exist:cF { \c_@@_code_root_tl \l_keys_path_tl }
-      {
-        \__chk_log:x
-          { Defining~key~\l_keys_path_tl \c_space_tl \msg_line_context: }
-      }
+    \cs_if_exist:cF { \c_@@_code_root_tl #1 }
+      { \__chk_log:x { Defining~key~#1~\msg_line_context: } }
     \cs_set_protected:cpn { \c_@@_code_root_tl #1 } ##1 {#2}
   }
 \cs_generate_variant:Nn \@@_cmd_set:nn { nx , Vn , Vo }
