Allow for empty key modules
Perhaps longer-term might be better to switch to always having
a leading "/", but there still needs to be some setup.

--- a/l3kernel/l3keys.dtx
+++ b/l3kernel/l3keys.dtx
@@ -1338,7 +1338,12 @@
       {
         \str_if_eq:nnTF {#3} { . }
           {
-            \tl_set:Nx \l_keys_path_tl { \l_@@_module_tl / #1 }
+            \tl_set:Nx \l_keys_path_tl
+              {
+                \tl_if_empty:NF \l_@@_module_tl
+                  { \l_@@_module_tl  / }
+                #1
+              }
             \tl_set:Nn \l_@@_property_tl { . #2 }
           }
           {
@@ -2140,7 +2145,12 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_set_aux:nnn #1#2#3
   {
-    \tl_set:Nx \l_keys_path_tl { #1 / \@@_remove_spaces:n {#2} }
+    \tl_set:Nx \l_keys_path_tl
+      {
+        \tl_if_blank:nF {#1}
+          { #1 / }
+        \@@_remove_spaces:n {#2}
+      }
     \tl_clear:N \l_@@_module_tl
     \exp_after:wN \@@_find_key_module:w \l_keys_path_tl / \q_stop
     \@@_value_or_default:n {#3}
