--- a/l3kernel/l3names.dtx
+++ b/l3kernel/l3names.dtx
@@ -90,7 +90,10 @@
 %   \item[\cs{etex_\ldots}] Introduced by the \eTeX{} extensions;
 %   \item[\cs{pdftex_\ldots}] Introduced by \pdfTeX{};
 %   \item[\cs{xetex_\ldots}] Introduced by \XeTeX{};
-%   \item[\cs{luatex_\ldots}] Introduced by \LuaTeX{}.
+%   \item[\cs{luatex_\ldots}] Introduced by \LuaTeX{};
+%   \item[\cs{utex_\ldots}] Introduced by \XeTeX{} and \LuaTeX{};
+%   \item[\cs{ptex_\ldots}] Introduced by p\TeX{};
+%   \item[\cs{uptex_\ldots}] Introduced by up\TeX{}.
 % \end{itemize}
 %
 % \end{documentation}
