Document a few weird TeX tokens in our full list

--- a/l3kernel/l3token.dtx
+++ b/l3kernel/l3token.dtx
@@ -1036,10 +1036,15 @@
 %     identical to the command that was used to select the current font
 %     (such as \tn{tenrm}) but it differs from it in shape.
 %   \item A \enquote{frozen} |\relax|, which differs from the primitive in
-%     both shape and meaning, is inserted when the closing \tn{fi} of a
+%     shape (but has the same meaning), is inserted when the closing \tn{fi} of a
 %     conditional is encountered before the conditional is evaluated.
-%   \item An |\endtemplate| (which expands to |\outer endtemplate:|)
-%     can be enountered when peeking ahead at the next token.
+%   \item Expanding \tn{noexpand} \meta{token} (when the \meta{token} is
+%     expandable) results in an internal token, displayed (temporarily)
+%     as \cs{notexpanded: \meta{token}}, whose shape coincides with the
+%     \meta{token} and whose meaning differs from \tn{relax}.
+%   \item An |\outer endtemplate:| (expanding to another internal token,
+%     |end of alignment template|) can be encountered when peeking ahead
+%     at the next token.
 %   \item Tricky programming might access a frozen |\endwrite|.
 %   \item Some frozen tokens can only be accessed in interactive
 %     sessions: |\cr|, |\right|, |\endgroup|, |\fi|, |\inaccessible|.
