Change \c_minus_one to -\c_one in l3experimental (see issue #316)

--- a/l3experimental/l3str/l3tl-analysis.dtx
+++ b/l3experimental/l3str/l3tl-analysis.dtx
@@ -412,7 +412,7 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_setup:n #1
   {
-    \int_set_eq:NN \tex_escapechar:D \c_minus_one
+    \int_set:Nn \tex_escapechar:D { - \c_one }
     \exp_after:wN \@@_disable_loop:N
       \tl_to_str:n {#1} { ~ } { ? ~ \__prg_break: }
     \__prg_break_point:
@@ -520,7 +520,7 @@
           \c_one
         \else:
           \if_catcode:w \exp_not:N \l_@@_token \c_group_end_token
-            \c_minus_one
+            - \c_one
           \else:
             \c_two
           \fi:
@@ -670,7 +670,7 @@
       = \l_@@_normal_int sp plus \l_@@_type_int sp \scan_stop:
     \int_incr:N \l_@@_index_int
     \int_zero:N \l_@@_normal_int
-    \if_int_compare:w \l_@@_nesting_int = \c_minus_one
+    \if_int_compare:w \l_@@_nesting_int = - \c_one
       \cs_set_eq:NN \@@_a_loop:w \scan_stop:
     \fi:
   }
@@ -815,7 +815,7 @@
     \exp_not:n { \fi: \fi: \fi: \fi: \fi: \fi: \fi: \fi: }
     \exp_not:N \__int_value:w `#1 \s__tl
    \exp_not:N \exp_after:wN \exp_not:N \@@_b_normals:ww
-     \exp_not:N \__int_value:w \exp_not:N \__int_eval:w \c_minus_one +
+     \exp_not:N \__int_value:w \exp_not:N \__int_eval:w - \c_one +
   }
 %    \end{macrocode}
 % \end{macro}
