Missing \end{macro}

--- a/l3kernel/l3keys.dtx
+++ b/l3kernel/l3keys.dtx
@@ -2364,6 +2364,8 @@
       }
   }
 %    \end{macrocode}
+% \end{macro}
+% \end{macro}
 %
 % \begin{macro}[EXP, int]{\@@_remove_spaces:n}
 % \begin{macro}[EXP, aux]{\@@_remove_spaces:w}
