Replace most \c_minus_one by -\c_one (see #316)
In a few places \c_minus_one was used in \if_case:w to point to
the \else: branch so I replaced it by \c_four (large enough).
The m3int01 test file changes because it probes error recovery
of \int_decr:N, changed.  The remaining changes will allocate
counters and shift register numbers in test files: next commit.

--- a/l3kernel/l3fp-basics.dtx
+++ b/l3kernel/l3fp-basics.dtx
@@ -215,7 +215,7 @@
         \if_int_compare:w #2 > #4 \exp_stop_f:
           \c_three
         \else:
-          \c_minus_one
+          \c_four
         \fi:
       \fi:
            \exp_after:wN \@@_add_zeros_o:Nww \__int_value:w
