--- a/l3kernel/l3fp-expo.dtx
+++ b/l3kernel/l3fp-expo.dtx
@@ -1208,12 +1208,12 @@
 %   \meta{digits} |;| which would be the digits surrounding the decimal
 %   period.  If the \meta{digits} are non-zero, the number is not an
 %   integer.  Otherwise, check the parity of the \meta{digit} and return
-%   \cs{c_zero} or \cs{c_minus_one}.
+%   \cs{c_zero} or |-|\cs{c_one}.
 %    \begin{macrocode}
 \cs_new:Npn \@@_pow_neg_case:w \s_@@ \@@_chk:w #1#2#3;
   {
     \if_case:w #1 \exp_stop_f:
-           \c_minus_one
+           -\c_one
     \or:   \@@_pow_neg_case_aux:nnnnn #3
     \else: \c_one
     \fi:
@@ -1222,7 +1222,7 @@
   {
     \if_int_compare:w #1 > \c_eight
       \if_int_compare:w #1 > \c_sixteen
-        \c_minus_one
+        -\c_one
       \else:
         \exp_after:wN \exp_after:wN
         \exp_after:wN \@@_pow_neg_case_aux:NNNNNNNNw
@@ -1248,7 +1248,7 @@
       \if_int_odd:w #8 \exp_stop_f:
         \c_zero
       \else:
-        \c_minus_one
+        -\c_one
       \fi:
     \else:
       \c_one
