--- a/l3kernel/l3fp-extended.dtx
+++ b/l3kernel/l3fp-extended.dtx
@@ -290,7 +290,7 @@
   {
     \exp_after:wN \@@_fixed_div_int_after:Nw
     \exp_after:wN #8
-    \__int_value:w \__int_eval:w \c_minus_one
+    \__int_value:w \__int_eval:w - \c_one
       \@@_fixed_div_int:wnN
       #1; {#7} \@@_fixed_div_int_auxi:wnn
       #2; {#7} \@@_fixed_div_int_auxi:wnn
