--- a/l3kernel/l3fp-parse.dtx
+++ b/l3kernel/l3fp-parse.dtx
@@ -125,6 +125,12 @@
 % \item[-1] Start and end of the expression.
 % \end{itemize}
 %
+% \begin{variable}{\c_@@_prec_end_int}
+%    \begin{macrocode}
+\cs_new_eq:NN \c_@@_prec_end_int \c_minus_one
+%    \end{macrocode}
+% \end{variable}
+%
 % \subsubsection{Storing results}
 %
 % The main question in parsing expressions expandably is to decide where
@@ -2091,7 +2097,7 @@
 %   Start an \cs{exp:w} expansion so that \cs{@@_parse:n} expands
 %   in two steps.  The \cs{@@_parse_operand:Nw} function will perform
 %   computations until reaching an operation with precedence
-%   \cs{c_minus_one} or less, namely, the end of the expression.  The
+%   \cs{c_@@_prec_end_int} or less, namely, the end of the expression.  The
 %   marker \cs{s_@@_mark} indicates that the next token is an already
 %   parsed version of an infix operator, and \cs{@@_parse_infix_end:N}
 %   has infinitely negative precedence.  Finally, clean up a
@@ -2103,7 +2109,7 @@
     \exp:w
       \exp_after:wN \@@_parse_after:ww
       \exp:w
-        \@@_parse_operand:Nw \c_minus_one
+        \@@_parse_operand:Nw \c_@@_prec_end_int
         \@@_parse_expand:w #1
         \s_@@_mark \@@_parse_infix_end:N
       \s_@@_stop
@@ -2586,7 +2592,7 @@
   {
     \if_case:w
           \if_catcode:w \scan_stop: \exp_not:N #7
-            \c_minus_one
+            \c_four
           \else:
             \__int_eval:w `#7 - `< \__int_eval_end:
           \fi:
