--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -1074,7 +1074,7 @@
           }
         \__iow_with:Nnn \tex_newlinechar:D { `\^^J }
           {
-            \__iow_with:Nnn \tex_errorcontextlines:D \c_minus_one
+            \__iow_with:Nnn \tex_errorcontextlines:D { - \c_one }
               {
                 \group_begin:
                   \cs_set_protected:Npn &
@@ -1124,7 +1124,7 @@
 % deliberate change by a user this is only set in format mode.
 %    \begin{macrocode}
 %<*initex>
-\int_gset_eq:NN \tex_errorcontextlines:D \c_minus_one
+\int_gset:Nn \tex_errorcontextlines:D { - \c_one }
 %</initex>
 %    \end{macrocode}
 %
@@ -2256,7 +2256,7 @@
       {
         \__iow_with:Nnn \tex_newlinechar:D { 10 }
           {
-            \__iow_with:Nnn \tex_errorcontextlines:D \c_minus_one
+            \__iow_with:Nnn \tex_errorcontextlines:D { - \c_one }
               {
                 \etex_showtokens:D \exp_after:wN \exp_after:wN \exp_after:wN
                   { \exp_after:wN \l_@@_internal_tl }
