--- a/l3trial/l3bigint/l3bigint.dtx
+++ b/l3trial/l3bigint/l3bigint.dtx
@@ -870,6 +870,13 @@
 %
 % \subsubsection{Main parsing functions}
 %
+% \begin{variable}{\c_@@_prec_end_int}
+%   Precedence of the start of the expression.
+%    \begin{macrocode}
+\int_const:Nn \c_@@_prec_end_int { -1 }
+%    \end{macrocode}
+% \end{variable}
+%
 % \begin{macro}[int, EXP]{\@@_parse_do:nn}
 % \begin{macro}[aux, EXP]{\@@_parse_do_aux:w}
 %   Parse an expression and run some code~|#2| on the result.
@@ -889,7 +896,7 @@
 %   This should be called within \cs{exp:w}.
 %   The \cs{@@_parse_operand:Nw} function will perform
 %   computations until reaching an operation with precedence
-%   \cs{c_minus_one} or less, namely, the end of the expression.  The
+%   \cs{c_@@_prec_end_int} or less, namely, the end of the expression.  The
 %   marker \cs{s_@@_mark} indicates that the next token is an already
 %   parsed version of an infix operator, and \cs{@@_parse_infix_end:N}
 %   has infinitely negative precedence.  Finally, clean up a
@@ -900,7 +907,7 @@
   {
     \exp_after:wN \@@_parse_after:ww
     \exp:w
-      \@@_parse_operand:Nw \c_minus_one
+      \@@_parse_operand:Nw \c_@@_prec_end_int
       \exp_end_continue_f:nw #1
       \s_@@_mark \@@_parse_infix_end:N
     \s_@@_stop
@@ -1549,7 +1556,7 @@
 %    \begin{macrocode}
 \cs_new:Npn \@@_tree_dp:n % expects "{<digits>}" (non-zero multiple of 8 digits, first block non-zero), outputs "<depth>.<tree>"
   {
-    \@@_int_value:w \@@_int_eval:w \c_minus_one
+    \@@_int_value:w \@@_int_eval:w - \c_one
     \@@_tree_dp_aux:n
   }
 \cs_new:Npn \@@_tree_dp_aux:n #1
@@ -1638,7 +1645,7 @@
   }
 \cs_new:Npn \@@_diff_sign_dd:w #1 ; #2 ;
   {
-    \if_int_compare:w #1 < #2 \c_minus_one \fi:
+    \if_int_compare:w #1 < #2 - \c_one \fi:
     \if_int_compare:w #1 > #2 \c_one \fi:
   }
 %    \end{macrocode}
@@ -2595,7 +2602,7 @@
     \or:
       \if_int_compare:w
           \@@_str_cmp_x:nn {#3} { 00000021 47483648 }
-          = \c_minus_one
+          = - \c_one
         \prg_return_true:
       \else:
         \prg_return_false:
