--- a/l3kernel/l3box.dtx
+++ b/l3kernel/l3box.dtx
@@ -976,7 +976,7 @@
       \int_set:Nn \tex_showboxbreadth:D {#3}
       \int_set:Nn \tex_showboxdepth:D   {#4}
       \int_set_eq:NN \tex_tracingonline:D #1
-      \int_set_eq:NN \tex_errorcontextlines:D \c_minus_one
+      \int_set:Nn \tex_errorcontextlines:D { - \c_one }
       \box_if_exist:NTF #2
         { \tex_showbox:D \use:n {#2} }
         {
