--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -1110,7 +1110,7 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \ior_close:N #1
   {
-    \int_compare:nT { \c_minus_one < #1 < \c_sixteen }
+    \int_compare:nT { - \c_one < #1 < \c_sixteen }
       {
         \tex_closein:D #1
         \prop_gremove:NV \g_@@_streams_prop #1
@@ -1194,7 +1194,7 @@
   {
     \use:x
       {
-        \int_set_eq:NN \tex_endlinechar:D \c_minus_one
+        \int_set:Nn \tex_endlinechar:D { - \c_one }
         \exp_not:n { \etex_readline:D #1 to #2 }
         \int_set:Nn \tex_endlinechar:D { \int_use:N \tex_endlinechar:D }
       }
@@ -1349,7 +1349,7 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \iow_close:N #1
   {
-    \int_compare:nT { \c_minus_one < #1 < \c_sixteen }
+    \int_compare:nT { - \c_one < #1 < \c_sixteen }
       {
         \tex_immediate:D \tex_closeout:D #1
         \prop_gremove:NV \g_@@_streams_prop #1
@@ -1572,7 +1572,7 @@
 %   nicer.
 %    \begin{macrocode}
 \group_begin:
-  \int_set_eq:NN \tex_escapechar:D \c_minus_one
+  \int_set:Nn \tex_escapechar:D { - \c_one }
   \tl_const:Nx \c_@@_wrap_marker_tl
     { \tl_to_str:n { \^^I \^^O \^^W \^^_ \^^W \^^R \^^A \^^P } }
 \group_end:
@@ -1638,7 +1638,7 @@
 \cs_new_protected:Npn \iow_wrap:nnnN #1#2#3#4
   {
     \group_begin:
-      \int_set_eq:NN \tex_escapechar:D \c_minus_one
+      \int_set:Nn \tex_escapechar:D { - \c_one }
       \cs_set:Npx \{ { \token_to_str:N \{ }
       \cs_set:Npx \# { \token_to_str:N \# }
       \cs_set:Npx \} { \token_to_str:N \} }
