--- a/l3kernel/l3int.dtx
+++ b/l3kernel/l3int.dtx
@@ -1313,7 +1313,7 @@
 \cs_new_protected:Npn \int_incr:N #1
   { \tex_advance:D #1 \c_one }
 \cs_new_protected:Npn \int_decr:N #1
-  { \tex_advance:D #1 \c_minus_one }
+  { \tex_advance:D #1 - \c_one }
 \cs_new_protected:Npn \int_gincr:N
   { \tex_global:D \int_incr:N }
 \cs_new_protected:Npn \int_gdecr:N
