--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -1457,7 +1457,7 @@
         \group_begin:
           \exp_args:No \etex_everyeof:D { \c_@@_rescan_marker_tl \exp_not:N }
           \int_compare:nNnT \tex_endlinechar:D = { 32 }
-            { \tex_endlinechar:D \c_minus_one }
+            { \tex_endlinechar:D - \c_one }
           \tex_newlinechar:D \tex_endlinechar:D
           #3 \scan_stop:
           \exp_args:No \@@_set_rescan:n { \tl_to_str:n {#4} }
@@ -1582,7 +1582,7 @@
     }
   \cs_new_protected:Npn \@@_set_rescan_single_aux:nn #1#2
     {
-      \tex_endlinechar:D \c_minus_one
+      \tex_endlinechar:D - \c_one
       \use:x
         {
           \exp_not:N \use:n
